connect to the demo db
